Modify game logic to mapping with the API from backend so it can fetch the image from Pinata and Fix the error that the name of asset_cid in the ResponseMetadataModel is not mapping with the gorm rule so it cannot get through the API endpoint

--- a/3DMuseum/index.html
+++ b/3DMuseum/index.html
@@ -119,8 +119,8 @@
     
       <div class="upload-details">
         <input type="text" name="" id="upload-title" placeholder="title" maxlength="30">
-        <textarea name="" id="upload-description" placeholder="description"></textarea>
-        <input type="text" name="" id="upload-handle" placeholder="twitter handle" maxlength="30">
+        <textarea name="" id="upload-vietnamese-description" placeholder="Vietnamese Description"></textarea>
+        <textarea name="" id="upload-english-description" placeholder="English-description"></textarea>
         <button type="submit" id="upload-btn" class="btn flex justify-center items-center gap-5">
           Upload
           <div class="spinner" id="upload-spinner"></div>
