Refactor all file. Add missing raycaster.js from stash to project

--- a/3DMuseum/index.html
+++ b/3DMuseum/index.html
@@ -132,9 +132,9 @@
 
     <div id="ImageShowContainer" class="ImageShowContainer" id="image-show-container" style="display: none;">
       <div class="FirstColContainer w-1/2 h-full flex items-center justify-center">
-        <div id="FirstCol" class="FirstCol w-auto max-w-full h-full py-5 object-contain"></div>
+        <div id="FirstIMGCol" class="FirstIMGCol w-auto max-w-full h-full py-5 object-contain"></div>
       </div>
-      <div id="SecondCol" class="SecondCol w-1/2 h-auto overflow-hidden mx-5 my-5">
+      <div id="SecondIMGCol" class="SecondIMGCol w-1/2 h-auto overflow-hidden mx-5 my-5">
         <div id="TopContainer" class="TopContainer w-full max-h-2/12 flex flex-row">
           <div id="TitleContainer" class="TitleContainer w-11/12 flex items-center justify-center"></div>
           <div id="CancelBtnContainer" class="CancelBtnContainer w-1/12 flex items-center justify-center cursor-pointer">
